--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DuongHoangP3</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="weather_forecast">Weather Forecast</string>
+    <string name="weather_icon">Weather Icon</string>
 </resources>
